Enable enable-native-access
Apparently that's required by skiko now.